[gd_scene load_steps=2 format=2]

[ext_resource path="res://do_not_forget_queue_free.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 579.0
margin_top = 124.0
margin_right = 940.0
margin_bottom = 144.0
text = "queue_free on green parent square DOES free memory"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 605.0
margin_top = 184.0
margin_right = 1013.0
margin_bottom = 204.0
text = "remove_child on green parent square DOES NOT free memory"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 593.0
margin_top = 78.0
margin_right = 856.0
margin_bottom = 98.0
text = "change_scene DOES free memory"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_queue_free_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_remove_child_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_change_scenen"]
